--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,29 +1,43 @@
-<h2>Sign up</h2>
+    <section id="path">
+      <div class="w-normal clearfix">
+        
+<ul>
+  <li><a href="/">LaBOLA</a></li>
+</ul>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= devise_error_messages! %>
+        <h1>LaBOLA（ラボーラ） 全てのスポーツ仲間が見つかるスポーツSNS</h1>
+      </div>
+    </section>
+<section id="login">
+  <h2>新規登録</h2>
+  <p>
+    
+    下記のフォームに必要事項を入力し、
+    <br>
+    「登録する」を押してください。
+  </p>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, :class => "form-control my-form" %>
+  <form action="/user/register?refer=%2Fuser%2Fsettings%2Fprofile" method="post" ><input type="hidden" name="_csrf" value="QqrRJ1RkQG" />
+
+    <ul class="regist">
+      <li><input id="input_name" type="text" name="name" value="" placeholder="ニックネーム" class="name" /></li>
+      <li><input id="input_mail" type="text" name="mail" value="" placeholder="メールアドレス" class="mail" /></li>
+      <li><input id="input_password" type="password" name="password" value="" placeholder="パスワード" class="password" /></li>
+      
+    </ul>
+    <div class="link"><input type="checkbox" checked=&#34;checked&#34; name="tos_agree" id="tos_agree" /><a href="/company/policy" target="_blank">利用規約</a>に同意する</div>
+    <div class="submit"><input id="regist-btn" class="btn red" type="submit" value="登録する"></div>
+  </form>
+  <hr>
+  <div style="text-align:center"><a href="javascript:void(0);" class="alert-btn" style="color:#000;line-height:18px;"><i class="size18 alert2">&nbsp;</i>メールが届かない方へ</a></div>
+  <hr>
+  <ul class="sns">
+    <li><a href="/user/login/facebook?refer=%2Fuser%2Fmypage" class="facebook"><i class="facebook size20 w"></i><span class="text">Facebookで新規登録する</span></a></li>
+    <li><a href="/user/login/twitter?refer=%2Fuser%2Fmypage" class="twitter"><i class="twitter size20 w"></i>Twitterで新規登録する</span></a></li>
+  </ul>
+  <hr>
+  <div class="other">
+    <div class="mb12">既に登録済みの方はログインしてください</div>
+    <a href="/user/login" class="btn" rel="nofollow">ログイン</a>
   </div>
-
-  <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "off", :class => "form-control my-form" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "off", :class => "form-control my-form" %>
-  </div>
-  <br>
-  <div class="actions">
-    <%= f.submit "Sign up", :class => "btn btn-primary" %>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+</section>
