--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,7 +3,6 @@
   <head>
     <title>Myapp</title>
     <%= csrf_meta_tags %>
-
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
@@ -16,12 +15,18 @@
                   <span class="icon-bar"></span>
                   <span class="icon-bar"></span>
         </button>
-        <a href="/posts" class="navbar-brand">myapp</a>
+        <a href="/" class="navbar-brand">myapp</a>
       </div>
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+        <ul class="nav navbar-nav navbar-left">
+        <li><a href="/recruit">募集情報</a></li>
+        <li><a href="/team">チーム機能</a></li>
+        <li><a href="/posts">ブログ</a></li>
+        <li><a href="/facility">施設・コート</a></li>
+        </ul>
         <ul class="nav navbar-nav navbar-right">
-        <li><a href="/users/sign_up">登録する</a></li>
-        <li><a href="/users/sign_in">ログインする</a></li>
+        <li><a href="/users/sign_in">ログイン</a></li>
+        <li><a href="/users/sign_up">新規登録</a></li>
         </ul>
         </div>
     </div>
